# batch_resolve

./: .travis.yml  Cargo.toml  Changelog.md  README.md  README_RUS.md  RELEASING.md  batch_resolve.toml  releaserc.toml
.circleci/: config.yml
data/: domains.txt  hosts.txt
packaging/: package_release.sh
src/: config.rs  error.rs  macros.rs  main.rs  resolver.rs  resolver_sys.rs
src/resolve/: batch.rs  config.rs  dns.rs  error.rs  mod.rs  resolver.rs  resolver_threadpool.rs
