[package]
name = "batch_resolve_cli"
description = "Fast asynchronous batch DNS resolver built on top of Tokio and TRust-DNS"
version = "0.3.5"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
homepage = "http://github.com/mersinvald/batch_resolve"
repository = "http://github.com/mersinvald/batch_resolve"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "mersinvald/batch_resolve" }

[[bin]]
name = "batch_resolve"

[dependencies]
futures = "0.1.11"
tokio-core = "0.1.6"
log = "0.3.7"
env_logger = "0.4.2"
lazy_static = "0.2"
clap = "2.21.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
crossbeam = "0.2"
num_cpus = "1.3.0"
indicatif = "0.1.0"

[dependencies.trust-dns]
version = "0.10"
default-features = false
features = ["openssl"]

[profile.release]
lto = true
